fix alignment

--- a/appcompose/home/home.css
+++ b/appcompose/home/home.css
@@ -56,6 +56,7 @@
     padding-right: 5px;
     text-align: center;
     vertical-align: middle;
+    clear: right;
 }
 
 .opacity {
